# pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cnert"
version = "0.1.4"
description = "Cnert makes TLS private keys, CSRs, private CAs and certificates."
authors = ["Maarten <ikmaarten@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maartenq/cnert"
repository = "https://github.com/maartenq/cnert"
documentation = "https://cnert.readthedocs.io/en/latest/"
keywords = ["certificate", "X.509", "TLS", "cryptography", "testing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^37.0.4"
idna = "^3.3"
typer = "^0.6.1"

[tool.poetry.scripts]
cnert = "cnert.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.2"}
tox = "^3.25.1"

[tool.black]
line-length = 79

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "\\# pragma: no cover\\b",
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
]
show_missing = true

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"
skip_gitignore = true
